salesforce-apex-presentation/force-app/main/default/objects/DeviceMessage__c/DeviceMessage__c.object-meta.xml
<CustomObject>
    <label>Device Message</label>
    <nameField>
        <label>Device Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>