salesforce-apex-presentation/force-app/main/default/objects/DeviceMessage__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <inlineHelpText>Message content</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>