salesforce-apex-presentation/force-app/main/default/objects/DeviceMessage__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <inlineHelpText>Message Code</inlineHelpText>
    <label>Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>