salesforce-apex-presentation/force-app/main/default/objects/DeviceMessage__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <inlineHelpText>Date/Time when this message was sent by device</inlineHelpText>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>