salesforce-apex-presentation/force-app/main/default/objects/DeviceMessage__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <inlineHelpText>Related Device</inlineHelpText>
    <label>Device</label>
    <referenceTo>Device__c</referenceTo>
    <relationshipLabel>Device Messages</relationshipLabel>
    <relationshipName>Device_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>