salesforce-apex-presentation/force-app/main/default/objects/DeviceMessage__c/fields/DeviceSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>DeviceSerialNumber__c</fullName>
    <label>Device Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>